# laughing-octo-pancake

./: .env  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
applications/plants/: admin.py  apps.py  filters.py  manager.py  mixins.py  models.py  pagination.py  serializers.py  tasks.py  urls.py  viewsets.py
applications/plants/factories/: plant.py
applications/plants/migrations/: 0001_initial.py
applications/plants/tests/: test_datapoint.py  test_plant.py  test_reports.py  test_task.py
core/: __init__.py  celery.py  settings.py  urls.py
dev_ops/django/: Dockerfile  entrypoint.sh  runserver.sh
dev_ops/nginx/local/: nginx.conf
