[tool.poetry]
name = "laughing_octo_pancake"
version = "0.1.0"
description = "Power Factors monitoring service assessment"
authors = [
    "Giannis Bratias <gbratias@gmail.com>",
]
package-mode = false

[tool.poetry.dependencies]
python = "==3.11.*"
Django = "==4.2.*"
celery = "==5.4.0"
django-extensions = "==3.2.3"
django-redis = "==5.4.0"
typing-extensions = "==4.12.2"
redis = "==5.2.1"
django-filter = "==24.3"
djangorestframework = "==3.15.2"
psycopg = {extras = ["binary"], version = "^3.2.3"}
django-cors-headers = "==4.6.0"
gunicorn = "==23.0.0"
uvicorn = {extras = ["standard"], version = "==0.34.0"}
django-celery-beat = "==2.7.0"
ipython = "==8.30.0"
requests = "==2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "==0.8.4"
coverage = "==7.6.9"
factory_boy = "==3.3.1"
debugpy = "==1.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
extend-exclude = [".tox", ".git", "*/migrations/*", "*/static/CACHE/*"]
builtins = ["unicode"]
line-length = 79

[tool.ruff.lint]
extend-select = [
    "I",  # Import order
    "C", 
    "E",
    "W",  # Pycodestyle warnings
    "B",
    "PL",
]
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401",  # Skip unused imports
    "F403",  # Skip `from module import *`
]
